# onnx2mlx

./: .gitignore  AGENTS.md  Changelog.md  LICENSE  README.md  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: pypi.yml
onnx2mlx/: __init__.py  _utils.py  context.py  convert.py  converter.py  export.py  version.py
onnx2mlx/ops/: __init__.py  activation.py  arithmetic.py  comparison.py  control.py  conv.py  image.py  linalg.py  normalization.py  pool.py  quant.py  reduction.py  sequence.py  shape.py  tensor.py
test/: test_export.py  test_torchvision.py
