#
#   onnx2mlx
#   Copyright © 2026 NatML Inc. All Rights Reserved.
#

[project]
name = "onnx2mlx"
dynamic = ["version"]
description = "Convert ONNX models into MLX callables for inference on Apple Silicon."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "NatML Inc.", email = "hi@muna.ai" },
]
keywords = ["onnx", "mlx", "apple-silicon", "inference", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["mlx", "numpy", "onnx"]

[project.urls]
Homepage = "https://muna.ai"
Documentation = "https://docs.muna.ai/onnx2mlx"
Repository = "https://github.com/muna-ai/onnx2mlx"
Issues = "https://github.com/muna-ai/onnx2mlx/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "onnxruntime",
    "torch",
    "torchvision",
    "transformers",
]


[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["onnx2mlx*"]

[tool.pytest.ini_options]
testpaths = ["test"]

[tool.setuptools.dynamic]
version = { attr = "onnx2mlx.version.__version__" }